# PyEPO

./: .gitignore  .pre-commit-config.yaml  Experiments01 - Shortest Path Two-Stage.ipynb  Experiments02 - Shortest Path SPO+.ipynb  Experiments03 - Shortest Path Black-Box.ipynb  Experiments04 - Shortest Path Comparsion.ipynb  Experiments06 - Knapsack SPO+.ipynb  Experiments07 - Knapsack SPO+ Relax.ipynb  Experiments08 - Knapsack Comparsion.ipynb  Experiments10 - Trivial Surgery Two-Stage.ipynb  Experimentsxx - Trivial Surgery SPO+.ipynb  README.md  Shortest Path Experiments Black-Box.ipynb  Shortest Path Experiments SPO+.ipynb  Shortest Path Experiments Two-Stage.ipynb  Shortest Path Experiments.ipynb  Test - Knapsack (Pyomo).ipynb  Test - Knapsack.ipynb  Test - Shortest Path (Pyomo).ipynb  Test - Shortest Path.ipynb  Test - TSP.ipynb  Test - Travelling Salesman.ipynb  Test.ipynb  Trivial Surgery Experiments SPO+.ipynb  Visualization.ipynb  benchmarks.ipynb  check_res.py  config.py  create_env.sh  eval.py  experiments.py  index.html  pipeline.py  pipeline_wc.py  plot.py  requirements.txt  run_experiments.ipynb  submit.py  sweep_nn.py  sweeps.py  (+5 more)
.claude/: settings.local.json
archive_notebook/: Experiments01 - Shortest Path Two-Stage.ipynb  Experiments05 - Knapsack Two-Stage.ipynb
archive_notebooks/: Experiments08 - Knapsack Black-Box.ipynb
config/: __init__.py  config_ks.py  config_sp.py  config_tsp.py
data/: __init__.py  dataset.py  shortestpath.py
docs/: README.md  index.html
evalm/: __init__.py  spoeval.py  truespo.py  unambspo.py
func/: __init__.py  blackbox.py  spoplus.py
loss/: __init__.py  spoplus.py
model/: __init__.py  optmodel.py  shortestpath.py
notebooks/: 01 Modeling and Training.ipynb  01 Optimization Model.ipynb  02 2D knapsack Visualization.ipynb  02 Optimization Dataset.ipynb  03 Training and Testing (MPAX).ipynb  03 Training and Testing kNN Loss.ipynb  03 Training and Testing.ipynb  03 Warcraft Shortest Path.ipynb  04 2D knapsack Solution Visualization.ipynb  04 CaVE for Binary Linear Programs.ipynb  05 2D Knapsack Solution Visualization.ipynb  05 2D knapsack Solution Visualization.ipynb  05 Warcraft Shortest Path.ipynb  06 Real World Energy Scheduling.ipynb  06 Real-World Energy Scheduling.ipynb  06 Training and Testing kNN Loss.ipynb  06 Warcraft Shortest Path.ipynb  06 kNN Robust Losses.ipynb  07 Real-World Energy Scheduling.ipynb  07 kNN Robust Losses.ipynb  08 Solving on MPAX with PDHG.ipynb  08 kNN Robust Losses.ipynb  09 Solving on MPAX with PDHG.ipynb  10 JAX Frontend.ipynb  Test - Hamming Distance.ipynb  Test - Knapsack (Pyomo).ipynb  Test - Knapsack Pool.ipynb  Test - Knapsack.ipynb  Test - Perturbed.ipynb  Test - Shortest Path (Pyomo).ipynb  Test - Shortest Path with Different Loss.ipynb  Test - Shortest Path.ipynb  Test - TSP.ipynb  Test - Travelling Salesman.ipynb  Test - VRP.ipynb  Visualization -  Knapsack 2 Reg.ipynb  Visualization -  Multi-Core Processor.ipynb  Visualization -  Neural Network Architecture.ipynb  Visualization -  TSP Reg.ipynb  Visualization - Auto Stat.ipynb  (+32 more)
pkg/: README.md  meta.yaml  out.txt  pyproject.toml  requirements.txt  setup.py  test.py
pkg/doc/source/: conf.py  index.rst
pkg/doc/source/content/: intro.rst
pkg/doc/source/content/examples/: evaluation.rst  function.rst  model.rst  twostage.rst
pkg/doc/source/content/modules/: pyepo.data.shortestpath.rst  pyepo.func.rst  pyepo.model.grb.grbmodel.rst
pkg/pyepo/: EPO.py  __init__.py  utils.py
pkg/pyepo/data/: __init__.py  _validation.py  dataset.py  knapsack.py  portfolio.py  shortestpath.py  tsp.py
pkg/pyepo/dsl/: __init__.py  compiled.py  constraint.py  expression.py  objective.py  problem.py  validation.py
pkg/pyepo/func/: __init__.py  _common.py  abcmodule.py  blackbox.py  cave.py  contrastive.py  learning_to_rank.py  listwise_ltr.py  nce.py  pairwise_ltr.py  perturbed.py  pgloss.py  pointwise_ltr.py  rank.py  regularized.py  runtime.py  spoplus.py  surrogate.py  unrolling.py  utils.py  utlis.py
pkg/pyepo/func/jax/: __init__.py  abcmodule.py  blackbox.py  cave.py  contrastive.py  perturbed.py  rank.py  regularized.py  solve.py  surrogate.py  utils.py
pkg/pyepo/metric/: __init__.py  _common.py  _validation.py  metrics.py  mse.py  regret.py  unambregret.py
pkg/pyepo/model/: __init__.py  _common.py  bases.py  opt.py  predefined.py  utils.py
pkg/pyepo/model/copt/: Example.ipynb  README.md  __init__.py  compile.py  coptmodel.py  knapsack.py  portfolio.py  shortestpath.py  tsp.py  vrp.py
pkg/pyepo/model/grb/: __init__.py  compile.py  grbmodel.py  knapsack.py  portfolio.py  shortestpath.py  tsp.py  vrp.py
pkg/pyepo/model/mpax/: __init__.py  compile.py  knapsack.py  mpaxmodel.py  shortestpath.py
pkg/pyepo/model/omo/: __init__.py  compile.py  knapsack.py  omomodel.py  portfolio.py  shortestpath.py  tsp.py  vrp.py
pkg/pyepo/model/ort/: __init__.py  compile.py  knapsack.py  ortcpmodel.py  ortmodel.py  shortestpath.py
pkg/pyepo/predictive/: __init__.py  forest.py  neural.py  nn.py  pred.py
pkg/pyepo/twostage/: __init__.py  autosklearnpred.py  sklearnpred.py
pkg/tests/: conftest.py  test_00_constants.py  test_10_utils.py  test_15_dsl.py  test_16_dsl_gurobi.py  test_20_data_gen.py  test_30_model.py  test_40_dataset.py  test_50_func.py  test_55_jax.py  test_60_metric.py  test_61_metric_validation.py  test_70_twostage.py  test_80_integration.py  test_85_backend_pipeline.py  test_90_cuda.py  test_cuda.py  test_data.py  test_func.py  test_integration.py  test_metric.py  test_model.py  test_twostage.py  test_utils.py
pkg/tests/support/: __init__.py  backends.py  fixtures.py  helpers.py  registry.py
pyepo/: EPO.py  __init__.py  utlis.py
res/: blackbox_n100.csv  blackbox_n1000.csv  blackbox_n1000_noise.csv  blackbox_n100_noise.csv  log_2s.csv  log_dbb.csv  log_dpo.csv  log_pfyl.csv  log_spo.csv  spoplus_n100.csv  spoplus_n1000.csv  spoplus_n1000_noise.csv  spoplus_n100_noise.csv  sweep-ks-bb-d1000p4e0.5.csv  sweep-ks-bb-d100p4e0.5.csv  sweep-ks-spo-d1000p4e0.5.csv  sweep-ks-spo-d100p4e0.5.csv  sweep-sp-bb-d1000p4e0.5.csv  wc_2s.csv  (+11 more)
(+7553 files in other folders)
